Add issues API in server (#43)
* update openapi.yaml

* add labels in clusterissue example

* implementing cluster and issues api in server component

* unit test for issues payload
